# DataStore

./: pyproject.toml  readme.md  requirments
datastore/: data.py  destination.py  example.py  record.py
datastore/input_ouput_data/: data_as_byte  test_json_data.json  test_primitive_data.txt
datastore/input_output_data/: data_as_json.json  test_json_data.txt
tests/: test_data.py  test_datastore.py  test_record.py
