[tool.poetry]
name = "DataStore"
version = "0.1.0"
description = ""
authors = ["laptop <enis.murseli@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.21.11"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
